k8s/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: frontend-ns
  labels:
    app: traffic-generator
    service: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
        service: test
    spec:
      containers:
      - name: traffic-generator
        image: curlimages/curl:latest
        command:
        - /bin/sh
        - -c
        - |
          [...]
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
